/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Integration.Model.Protobuf";
import "google/protobuf/timestamp.proto";

// An integration event raised when a grid area is removed from an actor.
message GridAreaRemovedFromActorIntegrationEventContract {
    // The id of the integration event. Is a GUID.
    string Id = 1;
    // The id of the actor. Is a GUID.
    string ActorId = 2;
    // The id of the organization. Is a GUID.
    string OrganizationId = 3;
    // The creation time of the integration event.
    google.protobuf.Timestamp EventCreated = 4;
    // The EIC market role function that the grid area has been removed from.   
    // For a list of possible values, see EicFunction.cs.
    int32 MarketRoleFunction = 5;
    // The id of the grid area. Is a GUID.
    string GridAreaId = 6;
    // The id of the grid area link. Is a GUID.
    string GridAreaLinkId = 7;
    // The type of the current event: GridAreaRemovedFromActorIntegrationEvent.
    string Type = 8;
}